--- a/requirements.txt
+++ b/requirements.txt
@@ -77,6 +77,7 @@ terminado==0.15.0
 threadpoolctl==3.1.0
 tinycss2==1.1.1
 tornado==6.2
+tqdm==4.64.1
 traitlets==5.3.0
 wcwidth==0.2.5
 webencodings==0.5.1
