--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ beautifulsoup4==4.11.1
 bleach==5.0.1
 certifi==2022.6.15
 cffi==1.15.1
+charset-normalizer==2.1.1
 colorama==0.4.5
 cycler==0.11.0
 debugpy==1.6.3
@@ -16,6 +17,7 @@ entrypoints==0.4
 executing==0.8.3
 fastjsonschema==2.16.1
 fonttools==4.37.1
+idna==3.4
 importlib-metadata==4.12.0
 ipykernel==6.15.2
 ipython==8.4.0
@@ -49,7 +51,7 @@ pandocfilters==1.5.0
 parso==0.8.3
 pickleshare==0.7.5
 Pillow==9.2.0
-pip==22.1.2
+pip==22.2.2
 prometheus-client==0.14.1
 prompt-toolkit==3.0.20
 psutil==5.9.2
@@ -65,6 +67,7 @@ pywinpty==2.0.7
 pyzmq==23.2.1
 qtconsole==5.3.2
 QtPy==2.2.0
+requests==2.28.1
 scikit-learn==1.1.2
 scipy==1.9.1
 seaborn==0.12.0
@@ -79,6 +82,7 @@ tinycss2==1.1.1
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.3.0
+urllib3==1.26.12
 wcwidth==0.2.5
 webencodings==0.5.1
 wheel==0.37.1
