--- a/05-deployment/code/Dockerfile
+++ b/05-deployment/code/Dockerfile
@@ -5,3 +5,11 @@ RUN pip install pipenv
 WORKDIR /app
 
 COPY ["Pipfile", "Pipfile.lock", "./"]
+
+RUN pipenv install --system --deploy
+
+COPY ["predict.py", "model_C=1.0.bin", "./"]
+
+EXPOSE 9696
+
+ENTRYPOINT ["gunicorn", "--bind=0.0.0.0:9696", "predict:app"]
