--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ pandocfilters==1.5.0
 parso==0.8.3
 pickleshare==0.7.5
 Pillow==9.2.0
-pip==22.2.2
+pip==22.3
 prometheus-client==0.14.1
 prompt-toolkit==3.0.20
 psutil==5.9.2
@@ -88,4 +88,5 @@ webencodings==0.5.1
 wheel==0.37.1
 widgetsnbextension==4.0.3
 wincertstore==0.2
+xgboost==1.6.2
 zipp==3.8.1
