--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,42 @@
+aiohttp==3.8.3
+aiosignal==1.2.0
+anyio==3.6.1
+appdirs==1.4.4
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
+asgiref==3.5.2
 asttokens==2.0.5
+async-timeout==4.0.2
 attrs==22.1.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
+bentoml==1.0.7
 bleach==5.0.1
+build==0.8.0
+cattrs==22.2.0
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.1
+circus==0.17.1
+click==8.1.3
+cloudpickle==2.2.0
 colorama==0.4.5
+commonmark==0.9.1
+contextlib2==21.6.0
 cycler==0.11.0
 debugpy==1.6.3
 decorator==5.1.1
+deepmerge==1.0.1
 defusedxml==0.7.1
+Deprecated==1.2.13
 entrypoints==0.4
+exceptiongroup==1.0.0rc9
 executing==0.8.3
 fastjsonschema==2.16.1
 fonttools==4.37.1
+frozenlist==1.3.1
+fs==2.4.16
+h11==0.14.0
 idna==3.4
 importlib-metadata==4.12.0
 ipykernel==6.15.2
@@ -39,54 +59,80 @@ MarkupSafe==2.1.1
 matplotlib==3.5.3
 matplotlib-inline==0.1.6
 mistune==2.0.4
+multidict==6.0.2
 nbclient==0.6.8
 nbconvert==7.0.0
 nbformat==5.4.0
 nest-asyncio==1.5.5
 notebook==6.4.12
 numpy==1.23.3
+opentelemetry-api==1.12.0
+opentelemetry-instrumentation==0.33b0
+opentelemetry-instrumentation-aiohttp-client==0.33b0
+opentelemetry-instrumentation-asgi==0.33b0
+opentelemetry-sdk==1.12.0
+opentelemetry-semantic-conventions==0.33b0
+opentelemetry-util-http==0.33b0
 packaging==21.3
 pandas==1.4.4
 pandocfilters==1.5.0
 parso==0.8.3
+pathspec==0.10.1
+pep517==0.13.0
 pickleshare==0.7.5
 Pillow==9.2.0
 pip==22.3
+pip-tools==6.9.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.20
 psutil==5.9.2
 pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.11.2
+pynvml==11.4.1
 pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
+python-dotenv==0.21.0
+python-multipart==0.0.5
 pytz==2022.2.1
 pywin32==304
 pywinpty==2.0.7
+PyYAML==6.0
 pyzmq==23.2.1
 qtconsole==5.3.2
 QtPy==2.2.0
 requests==2.28.1
+rich==12.6.0
+schema==0.7.5
 scikit-learn==1.1.2
 scipy==1.9.1
 seaborn==0.12.0
 Send2Trash==1.8.0
 setuptools==63.4.1
+simple-di==0.1.5
 six==1.16.0
+sniffio==1.3.0
 soupsieve==2.3.2.post1
 stack-data==0.2.0
+starlette==0.21.0
 terminado==0.15.0
 threadpoolctl==3.1.0
 tinycss2==1.1.1
+tomli==2.0.1
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.3.0
+typing_extensions==4.4.0
 urllib3==1.26.12
+uvicorn==0.18.3
+watchfiles==0.17.0
 wcwidth==0.2.5
 webencodings==0.5.1
 wheel==0.37.1
 widgetsnbextension==4.0.3
 wincertstore==0.2
+wrapt==1.14.1
 xgboost==1.6.2
+yarl==1.8.1
 zipp==3.8.1
