--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
 brotlipy==0.7.0
-certifi==2021.10.8
-cffi==1.15.0
+certifi==2022.9.24
+cffi==1.15.1
 charset-normalizer==2.0.4
-colorama==0.4.4
-conda==4.12.0
-conda-content-trust==0+unknown
-conda-package-handling==1.8.1
-cryptography==36.0.0
+colorama==0.4.5
+conda==22.9.0
+conda-package-handling==1.9.0
+cryptography==37.0.1
 distlib==0.3.6
 filelock==3.8.0
-idna==3.3
+idna==3.4
 menuinst==1.4.18
-pip==21.2.4
+pip==22.2.2
 pipenv==2022.9.24
 platformdirs==2.5.2
 pycosat==0.6.3
@@ -19,12 +18,12 @@ pycparser==2.21
 pyOpenSSL==22.0.0
 PySocks==1.7.1
 pywin32==302
-requests==2.27.1
+requests==2.28.1
 ruamel-yaml-conda==0.15.100
-setuptools==61.2.0
-six==1.16.0
-tqdm==4.63.0
-urllib3==1.26.8
+setuptools==63.4.1
+toolz==0.11.2
+tqdm==4.64.1
+urllib3==1.26.11
 virtualenv==20.16.5
 virtualenv-clone==0.5.7
 wheel==0.37.1
