Add session7 and homework7

--- a/homework/session7/homework7/bentofile.yaml
+++ b/homework/session7/homework7/bentofile.yaml
@@ -1,11 +1,10 @@
 service: "service:svc"
 labels:
   owner: awon
-  project: bento-credit-classifier
+  project: bento-cool-classifier
 include:
 - "*.py"
 python:
   packages:
-    - xgboost
     - sklearn
-    - pydantic
+
