--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ backcall==0.2.0
 beautifulsoup4==4.11.1
 bentoml==1.0.7
 bleach==5.0.1
+Brotli==1.0.9
 build==0.8.0
 cattrs==22.2.0
 certifi==2022.9.24
@@ -22,6 +23,7 @@ click==8.1.3
 cloudpickle==2.2.0
 colorama==0.4.5
 commonmark==0.9.1
+ConfigArgParse==1.5.3
 contextlib2==21.6.0
 contourpy==1.0.5
 cycler==0.11.0
@@ -37,9 +39,14 @@ executing==0.8.3
 fastjsonschema==2.16.2
 filelock==3.8.0
 Flask==2.2.2
+Flask-BasicAuth==0.2.0
+Flask-Cors==3.0.10
 fonttools==4.37.4
 frozenlist==1.3.1
 fs==2.4.16
+gevent==22.10.1
+geventhttpclient==2.0.8
+greenlet==1.1.3.post0
 h11==0.14.0
 idna==3.4
 importlib-metadata==5.0.0
@@ -56,10 +63,12 @@ jupyter-core==4.11.1
 jupyter-server==1.21.0
 jupyterlab-pygments==0.2.2
 kiwisolver==1.4.4
+locust==2.12.2
 MarkupSafe==2.1.1
 matplotlib==3.6.0
 matplotlib-inline==0.1.6
 mistune==2.0.4
+msgpack==1.0.4
 multidict==6.0.2
 nbclassic==0.4.5
 nbclient==0.7.0
@@ -107,6 +116,7 @@ PyYAML==6.0
 pyzmq==24.0.1
 requests==2.28.1
 rich==12.6.0
+roundrobin==0.0.4
 schema==0.7.5
 scikit-learn==1.1.2
 scipy==1.9.2
@@ -142,3 +152,5 @@ wrapt==1.14.1
 xgboost==1.6.2
 yarl==1.8.1
 zipp==3.9.0
+zope.event==4.5.0
+zope.interface==5.5.0
